@@ -1,7 +1,5 @@
 CLEANFILES = linux.conf hpux.conf cygwin.conf default.conf freebsd.conf *~
 
-SUBDIRS = commands
-
 do_subst = sed -e 's,[@]sharedstatedir[@],$(sharedstatedir),g' \
 		-e 's,[@]localstatedir[@],$(localstatedir),g' \
 		-e 's,[@]sysconfdir[@],$(sysconfdir),g' \
