@@ -1,0 +1,2 @@
+# CygWin Setup Commands #
+PING="$PING -n 1";
