@@ -1,0 +1,2 @@
+# FreeBSD Setup Commands #
+PING="$PING -c 1";
